Version 1.13.11:
 * Campaigns:
   * The Cutscene_Minimal theme is now used in all dialog only scenarios that
     have linger=no in [end_level].
   * An Orcish Incursion:
     * New story art.
   * A Tale of Two Brothers:
     * Added a full set of hints on easy difficulty.
   * Delfador's Memoirs:
     * Iliah-Malal can now be killed by either undead or Delfador in S19
     * S19 has been rebalanced to increase difficulty and allow player & enemy
       to field more units.
   * Descent into Darkness:
     * 'Endless Night' now has accurate & improved scenario objectives. It also
       has received improvements in dialog, map appearance, and difficulty.
     * S08/S09 A Small Favor 2/3 - Fixed bug preventing door operation/usage.
     * Fixed and improved appearance and handling of the wose.
     * Other minor fixes and improvements.
 * Packaging
   * Renamed the target and binary for the Boost unit tests from `test` to
     `boost_unit_tests`. This quells warnings from CMake about reserved target
     names, and reduces confusion about which `test` is intended: the wesnoth
     executable or the standard shell command.
   * The CMake build system now uses standard Kitware-supported variables
     from the `GNUInstallDirs` module. Distributions might have to change
     the defaults to suit their FHS needs.
   * The previous addition of `GNUInstallDirs` necessitates a bumping of the
     CMake minimum requirements, which is now at 2.8.5. Most distributions
     already use a CMake version above 3.0, so this would only affect users
     of vintage CMake versions.
   * higher resolutions of the application icon have been added and are now
     stored in the hicolor icon theme's directory
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Czech, Italian, Spanish
 * Lua API:
   * New wesnoth.unit_types[].advances_to getter.
   * New wesnoth.unit_types[].advances_from getter.
   * wml module now offers another new way of accessing WML variables: