@@ -7,33 +7,33 @@
 [window]
 	id = "install_dependencies"
 	description = "Install dependencies prompt."
-	
+
 	[resolution]
 		definition = "default"
-		
+
 		automatic_placement = true
 		horizontal_placement = "center"
 		vertical_placement = "center"
-		
+
 		[tooltip]
 			id = "tooltip"
 		[/tooltip]
-		
+
 		[helptip]
 			id = "helptip"
 		[/helptip]
-		
+
 		[grid]
 			[row]
 				[column]
 					border = "all"
 					border_size = 5
 					horizontal_alignment = "left"
-					
+
 					[label]
 						id = "title"
 						definition = "title"
-						
+
 						label = _ "Install Dependencies"
 					[/label]
 				[/column]
@@ -46,12 +46,12 @@
 					[label]
 						id = "label"
 						definition = "default"
-						
+
 						wrap = true
 						characters_per_line = 70
-						
+
 						# This isn't localizable because the final text is set from C++ code (in order to support singular and plural forms properly)
-						label = "The selected add-on has the following dependencies, which are not currently installed. Do you wish to install them before continuing?"
+						label = "The selected add-on has the following dependencies, which are outdated or not currently installed. Do you wish to install them before continuing?"
 					[/label]
 				[/column]
 			[/row]
@@ -59,10 +59,12 @@
 				grow_factor = 1
 				[column]
 					horizontal_grow = true
+					border = "all"
+					border_size = 5
+
 					[addon_list]
 						id = "dependencies"
 						definition = "default"
-						install_status_visibility = "invisible"
 						install_buttons_visibility = "invisible"
 					[/addon_list]
 				[/column]
@@ -75,7 +77,7 @@
 							[column]
 								border = "all"
 								border_size = 5
-							
+
 								[button]
 									id = "ok"
 									definition = "default"
