@@ -1,4 +1,7 @@
 Version 1.13.11:
+ * Add-ons client:
+   * Players will now be prompted to update outdated dependencies alongside
+     missing once when installing an add-on.
  * Campaigns:
    * The Cutscene_Minimal theme is now used in all dialog only scenarios that
      have linger=no in [end_level].
